--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "vite"
+    "start": "vite --port $PORT",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,11 @@
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.8",
     "vite": "^2.7.10"
+  },
+  "root": "./dist",
+  "clean_urls": true,
+  "routes": {
+    "/**": "index.html"
   },
   "dependencies": {
     "tailwind-scrollbar-hide": "^1.1.7"
