--- a/package.json
+++ b/package.json
@@ -12,10 +12,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^10.4.1",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.8",
-    "vite": "^2.7.10",
     "@types/nodemailer": "^6.4.4",
     "@types/react": "^17.0.42",
     "autoprefixer": "^10.4.2",
@@ -23,10 +19,10 @@
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.8",
     "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "vite": "^2.7.10"
   },
   "dependencies": {
-    "tailwind-scrollbar-hide": "^1.1.7",
     "@tanem/react-nprogress": "^3.0.73",
     "bcryptjs": "^2.4.3",
     "googleapis": "^96.0.0",
@@ -34,9 +30,11 @@
     "mongoose": "^6.2.6",
     "next": "latest",
     "nodemailer": "^6.7.2",
+    "package.json": "^2.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^3.5.7"
   }
 }
